java8 重构