@@ -7,6 +7,7 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.*;
 
 public class Yuque {
@@ -14,11 +15,11 @@ public class Yuque {
     private static Map<Integer, String> exportRecords = new HashMap<>();
     private static int[] repoIds;
 
-    private static Path mdDownloadPath = Path.of(System.getProperty("user.dir"));
+    private static Path mdDownloadPath = Paths.get(System.getProperty("user.dir"));
 
-    private static Path picDownloadPath = Path.of(mdDownloadPath.toString(), File.separator + "picture");
+    private static Path picDownloadPath = Paths.get(mdDownloadPath.toString(), File.separator + "picture");
 
-    private static final YuqueClient client = YuqueClientFactory.initClient();
+    private static final YuqueClient client = YuqueClient.getInstance();
 
     public static void main(String[] args) {
         // 加载配置信息
@@ -44,11 +45,11 @@ public class Yuque {
 
     private static void loadConfig() {
         if (isInvalidPath(System.getProperty("mdPath"))) {
-            mdDownloadPath = Path.of(System.getProperty("mdPath"));
+            mdDownloadPath = Paths.get(System.getProperty("mdPath"));
         }
 
         if (isInvalidPath(System.getProperty("picPath"))) {
-            picDownloadPath = Path.of(System.getProperty("picPath"));
+            picDownloadPath = Paths.get(System.getProperty("picPath"));
         }
 
         try {
@@ -66,7 +67,7 @@ public class Yuque {
 
     private static boolean isInvalidPath(String strPath) {
         if (null != strPath && !strPath.isEmpty()) {
-            Path path = Path.of(strPath);
+            Path path = Paths.get(strPath);
             if (Files.exists(path)) {
                 return true;
             }else {
