@@ -2,21 +2,21 @@ package com.greek.yuque;
 
 import com.yuque.greek.MarkdownUtil;
 import com.yuque.greek.YuqueClient;
-import com.yuque.greek.YuqueClientFactory;
 import com.yuque.greek.entity.Doc;
 import org.junit.jupiter.api.Test;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
-import java.util.Objects;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Stream;
 
+import static java.util.stream.Collectors.toList;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
@@ -26,7 +26,7 @@ public class MarkdownUtilTest {
     private final String TEST_DOC_SLUG_01 = "kyclhx";
     private final String TEST_DOC_SLUG_02 = "vg1kak";
     private static final Integer TEST_REPO_ID = 34925886;
-    private final YuqueClient yuqueClient = YuqueClientFactory.initClient();
+    private final YuqueClient yuqueClient = YuqueClient.getInstance();
 
     @Test
     void getAllImageTest() {
@@ -43,8 +43,8 @@ public class MarkdownUtilTest {
     void downloadMdTest() throws IOException {
         Doc doc = yuqueClient.getDocDetail(TEST_REPO_ID, TEST_DOC_SLUG_01);
 
-        Path mdDownloadTestPath = Path.of(System.getProperty("user.dir"), File.separator, "md");
-        Path picDownloadTestPath = Path.of(mdDownloadTestPath.toString(), File.separator + "picture");
+        Path mdDownloadTestPath = Paths.get(System.getProperty("user.dir"), File.separator, "md");
+        Path picDownloadTestPath = Paths.get(mdDownloadTestPath.toString(), File.separator + "picture");
 
         Files.createDirectory(mdDownloadTestPath);
         Files.createDirectory(picDownloadTestPath);
@@ -54,18 +54,19 @@ public class MarkdownUtilTest {
         // 验证文件是否下载成功
         assertTrue(Files.exists(mdDownloadTestPath));
         assertTrue(Files.exists(picDownloadTestPath));
-        assertTrue(Files.exists(Path.of(mdDownloadTestPath.toString(), File.separator, "yuque-test-doc-01.md")));
+        assertTrue(Files.exists(Paths.get(mdDownloadTestPath.toString(), File.separator, "yuque-test-doc-01.md")));
 
-        Path docPicSavePath = Path.of(picDownloadTestPath.toString(), File.separator, doc.getTitle().replaceAll(" ", ""));
+        Path docPicSavePath = Paths.get(picDownloadTestPath.toString(), File.separator, doc.getTitle().replaceAll(" ", ""));
         List<Path> picPath;
         try (Stream<Path> paths = Files.walk(docPicSavePath)) {
             picPath = paths.filter(Files::isRegularFile)
-                    .toList();
+                    .collect(toList());
         }
         assertEquals(1, picPath.size());
 
         // 验证 md 文件中的路径是否替换成功
-        String downloadedMarkdownContent = Files.readString(Path.of(mdDownloadTestPath.toString(), File.separator, doc.getTitle() + ".md"));
+        byte[] bytes = Files.readAllBytes(Paths.get(mdDownloadTestPath.toString(), File.separator, doc.getTitle() + ".md"));
+        String downloadedMarkdownContent = new String(bytes, StandardCharsets.UTF_8);
         Matcher matcher = PIC_REGEX.matcher(downloadedMarkdownContent);
         assertTrue(matcher.find());
 
@@ -74,7 +75,7 @@ public class MarkdownUtilTest {
         );
 
         // 清除生成的临时文件
-//        clenTempFile(mdDownloadTestPath.toFile());
+        clenTempFile(mdDownloadTestPath.toFile());
     }
 
 
